# mini-aurora

./: Cargo.toml  README.md  current_plan
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/compute/: Cargo.toml
crates/compute/src/: buffer_pool.rs  engine.rs  lib.rs  transaction.rs
crates/pagestore/: Cargo.toml
crates/pagestore/src/: lib.rs  materialize.rs  page_cache.rs
crates/storage/: Cargo.toml
crates/storage/src/: config.rs  engine.rs
crates/wal/: Cargo.toml
crates/wal/src/: lib.rs  reader.rs  recovery.rs  segment.rs  writer.rs
scenarios/: burst.toml  cold_reads.toml  noisy_neighbor.toml  tiered_demo.toml
src/: main.rs  scenario.rs
src/viz/: compute.rs  engine.rs  events.rs  metrics.rs  mod.rs  renderer.rs  tracer.rs
tests/: phase1_tests.rs  phase2_tests.rs
