[workspace]
members = [
    "crates/common",
    "crates/wal",
    "crates/pagestore",
    "crates/storage",
    "crates/compute",
]
resolver = "2"

[package]
name = "mini-aurora"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mini-aurora"
path = "src/main.rs"

[dependencies]
mini-aurora-common = { path = "crates/common" }
mini-aurora-wal = { path = "crates/wal" }
mini-aurora-pagestore = { path = "crates/pagestore" }
mini-aurora-storage = { path = "crates/storage" }
mini-aurora-compute = { path = "crates/compute" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
async-trait = "0.1"

[dev-dependencies]
mini-aurora-common = { path = "crates/common" }
mini-aurora-wal = { path = "crates/wal" }
mini-aurora-pagestore = { path = "crates/pagestore" }
mini-aurora-storage = { path = "crates/storage" }
mini-aurora-compute = { path = "crates/compute" }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
anyhow = "1"

[[test]]
name = "phase1_tests"
path = "tests/phase1_tests.rs"
