[package]
name = "mini-aurora-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
mini-aurora-common = { path = "../common" }
mini-aurora-wal = { path = "../wal" }
mini-aurora-pagestore = { path = "../pagestore" }
tokio = { version = "1", features = ["sync"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
